--- a/stroop.html
+++ b/stroop.html
@@ -31,10 +31,10 @@
 <div id="word">開始ボタンを押してください</div>
 
 <div id="buttons" style="margin-bottom: 20px;">
-  <button class="color-button" style="background-color: red;" onclick="checkAnswer('red')">赤</button>
-  <button class="color-button" style="background-color: blue;" onclick="checkAnswer('blue')">青</button>
-  <button class="color-button" style="background-color: green;" onclick="checkAnswer('green')">緑</button>
-  <button class="color-button" style="background-color: orange;" onclick="checkAnswer('orange')">黄</button>
+  <button class="color-button" style="background-color: red;" onclick="checkAnswer('red')">　</button>
+  <button class="color-button" style="background-color: blue;" onclick="checkAnswer('blue')">　</button>
+  <button class="color-button" style="background-color: green;" onclick="checkAnswer('green')">　</button>
+  <button class="color-button" style="background-color: orange;" onclick="checkAnswer('orange')">　</button>
 </div>
 
 <button onclick="startTest()">テスト開始</button>
